MFE-102 fix a tiny spacing issue in code blocks

--- a/src/routes/projects/styles/night-owl-light.css
+++ b/src/routes/projects/styles/night-owl-light.css
@@ -37,6 +37,8 @@ pre {
 }
 
 pre > code {
+  padding: 0;
+
   font-family: 'dm';
   font-size: 0.88em;
 }
