--- a/src/routes/projects/styles/night-owl.css
+++ b/src/routes/projects/styles/night-owl.css
@@ -39,6 +39,8 @@ pre {
 }
 
 pre > code {
+  padding: 0;
+
   font-family: 'dm';
   font-size: 0.88em;
 }
